MapSetup : minor ix for windows compatibility.